Bad default font selection for Mongolian script on macOS
Categories
(Core :: Layout: Text and Fonts, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox72 | --- | fixed |
People
(Reporter: hsivonen, Assigned: jfkthame)
References
()
Details
Attachments
(1 file)
Steps to reproduce
- Navigate to https://florian.rivoal.net/csswg/rare-lang/ in Nightly on macOS Mojave.
- Navigate to https://florian.rivoal.net/csswg/rare-lang/ in Nightly on Android.
Actual results
The example on the left renders with tiny isolated glyphs on macOS. The font in use is STHeiti.
On Android, the example on the left renders similarly to @font-face the example on the right. I expect the font that's used on Android to be Noto Sans Mongolian.
Expected results
Since macOS ships Noto Sans Mongolian, expected it to be used instead of the various other macOS-bundled fonts that provide isolated glyphs for the Mongolian script but don't support proper joining behavior.
Additional info
I'd be unsurprised if the same issue affected other scripts. Chances are that the macOS-shipped Noto fonts should be higher up in the fallback order generally, since it seems that the scripts that macOS ships a Noto font for aren't properly supported by other fonts bundled with macOS.
Comment 1•6 years ago
|
||
The priority flag is not set for this bug.
:boris, could you have a look please?
For more information, please visit auto_nag documentation.
| Assignee | ||
Comment 2•6 years ago
|
||
Yeah, this is pretty bad. I see that STHeiti is set as the default fallback for the Mongolian range in gfxPlatformMac.cpp, but it really isn't very useful. IIRC that was probably generated by jdaggett based on inventories of character coverage, but didn't take account of the fact that the font doesn't actually shape properly. (Also, I think the font assignments there predate Apple's inclusion of various Noto fonts with the OS, so there wasn't necessarily a better option available.)
Anyhow, we should just change this.
| Assignee | ||
Comment 3•6 years ago
|
||
Comment 5•6 years ago
|
||
| bugherder | ||
Description
•