Bug 1586218 - Use a better default fallback font for Mongolian on macOS. r=jwatt

Differential Revision: https://phabricator.services.mozilla.com/D49780